<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.stranger_sparks.view.activities.ui.activities.account.like_liked.LikeLikedViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <!-- <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_background"
            />-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_background"
            />
        <LinearLayout
            android:id="@+id/llCustomToolBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_back_arrow"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:id="@+id/ivClose"
                    app:tint="@color/white"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_three_dots_menu"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:visibility="gone"
                    />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llCustomToolBar"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:padding="16dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selecor"
                    android:textColor="@color/radio_text_color"
                    android:layout_marginEnd="1dp"
                    android:gravity="center"/>
                <RadioButton
                    android:id="@+id/rbLike"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:padding="16dp"
                    android:layout_margin="1dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selecor"
                    android:textColor="@color/radio_text_color"
                    android:layout_marginEnd="1dp"
                    android:gravity="center"/>
                <RadioButton
                    android:id="@+id/rbLiked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/liked"
                    android:padding="16dp"
                    android:layout_margin="0dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selecor"
                    android:textColor="@color/radio_text_color"
                    android:layout_marginEnd="1dp"
                    android:gravity="center"/>
                <RadioButton
                    android:id="@+id/rbViews"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/views"
                    android:padding="16dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selecor"
                    android:textColor="@color/radio_text_color"
                    android:elevation="4dp"
                    android:layout_marginEnd="1dp"
                    android:gravity="center"
                    android:visibility="gone"/>

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvLikeLiked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_item_transaction"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/tvNoRecordsDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_40sdp"
                android:visibility="gone"
                />
        </LinearLayout>

    </RelativeLayout>

</layout>


