<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.stranger_sparks.viewmodel.OtpVerificationViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <!-- <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_alignParentBottom="true"
           android:scaleType="centerCrop"
           android:src="@drawable/ic_app_background"
           />-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_background" />

        <include
            android:id="@+id/progressLay"
            layout="@layout/progress_layout" />


        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="@dimen/_20sdp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/enter_code"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/we_have_sent_otp"
                    android:textColor="@color/otp_dull_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTileOfText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/mulish_regular"
                    android:text=""
                    android:textColor="@color/otp_number_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:height="50dp"
                    app:width="40dp"
                    app:bar_enabled="true"
                    app:bar_height="2dp"
                    app:length="4"
                    android:layout_gravity="center_horizontal"
                    app:box_margin="@dimen/_10sdp"
                    app:otp_text_size="@dimen/_24sdp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btnVerifyOtp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_weight="0.7"
                        android:background="@drawable/btn_curved_blue_gradiant"
                        android:fontFamily="@font/poppins"
                        android:text="@string/verify"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_dont_have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:text="@string/dont_get_otp"
                        android:textColor="@color/color_donthave"

                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/resend"
                        android:textColor="@color/color_register_now"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="OTP : 1234"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</layout>