<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.LoginFragment"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_background"
            />
        <include
            android:id="@+id/progressLay"
            layout="@layout/progress_layout"
            />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivClose"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_back_arrow"

                    />

                <TextView
                    android:id="@+id/tv_toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="0.8"
                    android:gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"

                    android:text="@string/filters"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorPrimary"
                    />


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">
            <LinearLayout
                android:id="@+id/llSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="@dimen/_20sdp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">









                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@drawable/edit_text_corner"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spgender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:padding="@dimen/_12sdp"
                            android:hint="@string/looking_for"
                            android:layout_marginHorizontal="@dimen/_8sdp"
                            android:gravity="left|center_vertical"
                            android:paddingHorizontal="@dimen/_15sdp"
                            android:textColor="#207ABF"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sdp"/>

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@drawable/edit_text_corner"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:padding="@dimen/_12sdp"
                            android:hint="@string/enter_age"
                            android:layout_marginHorizontal="@dimen/_8sdp"
                            android:gravity="left|center_vertical"
                            android:paddingHorizontal="@dimen/_15sdp"
                            android:textColor="#207ABF"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sdp"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@drawable/edit_text_corner"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spreligion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:padding="@dimen/_12sdp"
                            android:hint="@string/religion"
                            android:layout_marginHorizontal="@dimen/_8sdp"
                            android:gravity="left|center_vertical"
                            android:paddingHorizontal="@dimen/_15sdp"
                            android:textColor="#207ABF"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sdp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@drawable/edit_text_corner"
                        android:orientation="horizontal">

                        <AutoCompleteTextView
                            android:id="@+id/llAutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/location"
                            android:layout_marginHorizontal="@dimen/_8sdp"
                            android:gravity="left|center_vertical"
                            android:paddingHorizontal="@dimen/_15sdp"
                            android:textColor="#207ABF"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sdp"/>

                    </LinearLayout>










                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_30sdp">

                        <Button
                            android:layout_gravity="center_vertical"
                            android:id="@+id/btnapply_filter"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_curved_blue_gradiant"
                            android:text="@string/apply_filter"
                            android:textSize="@dimen/_14sdp"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:fontFamily="@font/poppins_medium"/>

                    </LinearLayout>




                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>